err/django-elements.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/django_elements-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/elements'...
Listing './lib/python3.5/site-packages/elements/extensions'...
Compiling './lib/python3.5/site-packages/elements/markup.py'...
***   File "./lib/python3.5/site-packages/elements/markup.py", line 33
    raise TemplateSyntaxError, "ElementType not found."
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elements/static'...
Listing './lib/python3.5/site-packages/elements/static/elements'...
Listing './lib/python3.5/site-packages/elements/static/elements/markitup'...
Listing './lib/python3.5/site-packages/elements/static/elements/markitup/markdown'...
Listing './lib/python3.5/site-packages/elements/static/elements/markitup/markdown/images'...
Listing './lib/python3.5/site-packages/elements/templates'...
Listing './lib/python3.5/site-packages/elements/templates/elements'...
Listing './lib/python3.5/site-packages/elements/templatetags'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markdown_macros-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/mdx_macros'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
